--- a/formularz.html
+++ b/formularz.html
@@ -12,30 +12,46 @@
 <form>
     <fieldset>
         <legend class="napis">Dane pacjenta</legend>
-            <label for="fimie">Imię:</label>
-                <input type="text" id="fimie" name="fname" placeholder="Wprowadź imie">
-            <label for="fnazwisko">Nazwisko:</label>
-                <input type="text" id="fnazwisko" name="fnazwisko" placeholder="Wprowadź Nazwisko">
-            <label for="fpesel">PESEL:</label>
-                <input type="text" id="fpesel" name="fpesel" placeholder="Wprowadź PESEL">
-            <label for="femail">E-mail:</label>
-                <input type="email" id="femail" name="femail" placeholder="Wprowadź e-mail">
-            <label for="fnumer">Numer telefonu:</label>
-                <input type="text" id="fnumer" name="fnumer" placeholder="Wprowadź numer telefonu (np. 123 456 789)">
-            <label for="fulica">Ulica:</label>
-                <input type="text" id="fulica" name="fulica" placeholder="Wprowadź ulicę">
-            <label for="fdom">Numer domu:</label>
-                <input type="text" id="fdom" name="fdom" placeholder="Wprowadź numer domu">
-            <label for="fmieszkanie">Numer mieszkania:</label>
-                <input type="text" id="fmieszkanie" name="fmieszkanie" placeholder="Wprowadź numer mieszkania (opcjonalnie)">
-            <label for="fkod">Kod pocztowy:</label>
-                <input type="text" id="fkod" name="fkod" placeholder="00-000">
-            <label for="fmiasto">Miasto:</label>
-                <input type="text" id="fmiasto" name="fmiasto" placeholder="Wprowadź miasto">
+        <section>
+            <div class="left">
+                <label for="fimie">Imię:
+                    <input type="text" id="fimie" name="fname" placeholder="Wprowadź imie"></label>
+            </div>
+            <div class="right">
+                <label for="fnazwisko">Nazwisko:</label>
+                    <input type="text" id="fnazwisko" name="fnazwisko" placeholder="Wprowadź Nazwisko">
+            </div>
+        </section>
+                <label for="fpesel">PESEL:</label>
+                    <input type="text" id="fpesel" name="fpesel" placeholder="Wprowadź PESEL">
+                <label for="femail">E-mail:</label>
+                    <input type="email" id="femail" name="femail" placeholder="Wprowadź e-mail">
+                <label for="fnumer">Numer telefonu:</label>
+                    <input type="text" id="fnumer" name="fnumer" placeholder="Wprowadź numer telefonu (np. 123 456 789)">
+                <label for="fulica">Ulica:</label>
+                    <input type="text" id="fulica" name="fulica" placeholder="Wprowadź ulicę">
+        <section>
+            <div class="left">
+                <label for="fdom">Numer domu:</label>
+                    <input type="text" id="fdom" name="fdom" placeholder="Wprowadź numer domu">
+            </div>
+            <div class="right">
+                <label for="fmieszkanie">Numer mieszkania:</label>
+                    <input type="text" id="fmieszkanie" name="fmieszkanie" placeholder="Wprowadź numer mieszkania (opcjonalnie)">
+            </div>
+        </section>
+        <section>
+            <div class="left">
+                 <label for="fkod">Kod pocztowy:</label>
+                    <input type="text" id="fkod" name="fkod" placeholder="00-000">
+            </div>
+            <div class="right">
+                <label for="fmiasto">Miasto:</label>
+                    <input type="text" id="fmiasto" name="fmiasto" placeholder="Wprowadź miasto">
+            </div>
+        </section>  
             <label for="dataur">Data urodzenia:</label>
                 <input type="date" id="dataur" name="dataur">
-            <label for="godzwiz">Godzina wizyty:</label>
-                <input type="time" id="godzwiz" name="godzwiz">
     </fieldset><br>
     <fieldset>
         <legend class="napis">Dane dotyczące wizyty</legend>
